--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 		<p>CSS Weather Forecast <i class="wi wi-sunrise"></i></p>
 	</header>
 		<ul class="forecast">
-			<li class="city-1 row">Lisbon <span>21°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-2 row">Paris <span>11°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-3 row">Belgrade <span>15°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-4 row">Moscow <span>21°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-5 row">Tel Aviv <span>32°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-6 row">Cairo <span>21°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-7 row">New York <span>17°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-8 row">New Delhi <span>17°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-9 row">San Francisco <span>15°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-10 row">Tokio <span>8°C<i class="wi wi-night-sleet"></i></span></li>
-			<li class="city-11 row">Sydney <span>25°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-1 row"><h3>Lisbon</h3> <span>21°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-2 row"><h3>Paris</h3> <span>11°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-3 row"><h3>Belgrade</h3> <span>15°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-4 row"><h3>Moscow</h3> <span>21°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-5 row"><h3>Tel Aviv</h3> <span>32°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-6 row"><h3>Cairo</h3><span>21°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-7 row"><h3>New York</h3> <span>17°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-8 row"><h3>New Delhi</h3> <span>17°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-9 row"><h3>San Francisco</h3> <span>15°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-10 row"><h3>Tokio</h3> <span>8°C<i class="wi wi-night-sleet"></i></span></li>
+			<li class="city-11 row"><h3>Sydney</h3> <span>25°C<i class="wi wi-night-sleet"></i></span></li>
 		</ul>
 	<footer>
 		<p class="footer">Have a nice day and don't forget umbrella if you are in New Delhi now!</p>
